banner prallax added, bio updates, scroll spacing fixes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11904,7 +11904,7 @@ pre .code {
 	background-size: 100% auto;
 	/* background-position: center top; */
 	background-repeat: no-repeat;
-	background-attachment: fixed;
+	/* background-attachment: fixed; */
 	color: var(--white);
 	aspect-ratio: 140 / 65;
 	width: 100%;
